--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body class="flex justify-between">
+    <header class="max-w-3xl flex justify-between bg-indigo-400 text-white p-5">
+      <h1 class="text-3xl font-bold underline bg-blue decoration-none">Hello world!</h1>
+      <div class="flex items-center gap-6">
+        <nav>
+          <a>Hola</a>
+          <a>Halo</a>
+          <a>Loha</a>
+        </nav>
+
+        <div class="">login</div>
+      </div>
+    </header>
+    <script src="latihan.js"></script>
+  </body>
 </html>
