--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ManagHer — Solopreneur Journey Susi Pudjiastuti</title>
+  <title>ManagHer — Solopreneur Journey</title>
   <link rel="stylesheet" href="style.css">
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
