sidebar dan header v2

--- a/Level 5/index.html
+++ b/Level 5/index.html
@@ -49,7 +49,7 @@
               <li class="opacity-60 flex items-center gap-2 p-2 rounded-md">🔒 Level 2: Validation</li>
               <li class="opacity-60 flex items-center gap-2 p-2 rounded-md">🔒 Level 3: Prototype</li>
               <li class="opacity-60 flex items-center gap-2 p-2 rounded-md">🔒 Level 4: Action</li>
-              <li class="opacity-60 flex items-center gap-2 p-2 rounded-md">🔒 Level 5: BMC</li>
+              <li class="opacity-60 flex items-center gap-2 p-2 rounded-md">🔒 Level 5: Growth</li>
             </ul>
           </div>
         </li>
